[package]
name = "envy-store"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
description = "deserialize AWS parameter store values into typesafe structs"
documentation = "https://softprops.github.io/envy-store"
homepage = "https://github.com/softprops/envy-store"
repository = "https://github.com/softprops/envy-store"
keywords = ["serde", "aws", "parameter-store", "config"]
license = "MIT"
readme = "README.md"
edition = "2018"
categories = [
  "config"
]

[badges]
coveralls = { repository = "softprops/envy-store"}
travis-ci = { repository = "softprops/envy-store"}

[dependencies]
envy = "0.4"
serde = "1.0"
rusoto_ssm = "0.47"
futures = "0.1"

[dev-dependencies]
maplit = "1.0"
rusoto_mock = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "0.1"